--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^11.11.11",
     "fullpage.js": "^4.0.30",
     "lottie-web": "^5.12.2",
