--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.1",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.11.11",
     "fullpage.js": "^4.0.30",
     "hls.js": "^1.5.17",
