--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-kit": "^6.0.8",
     "@sanity/vision": "^3.85.1",
+    "@svgr/webpack": "^8.1.0",
     "@use-gesture/react": "^10.3.1",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
@@ -22,11 +23,11 @@
     "hls.js": "^1.5.17",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.263.1",
-    "next": "15.0.3",
+    "next": "^15.3.3",
     "next-sanity": "^9.10.2",
     "nodemailer": "^6.9.16",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
     "react-is": "^19.1.0",
